feat: Add translation support for hero section name in English and Hungarian

--- a/MartinH-Portfolio/src/locales/en/translation.json
+++ b/MartinH-Portfolio/src/locales/en/translation.json
@@ -6,6 +6,7 @@
     "contact": "Contact"
   },
   "hero": {
+    "name": "Martin Horváth",
     "title": "Full Stack Web Developer",
     "description": "Full Stack Developer who connects React frontends with efficient Node.js-based backends...",
     "github_button": "GitHub",
