--- a/MartinH-Portfolio/src/locales/hu/translation.json
+++ b/MartinH-Portfolio/src/locales/hu/translation.json
@@ -6,6 +6,7 @@
     "contact": "Kapcsolat"
   },
   "hero": {
+    "name": "Horváth Martin",
     "title": "Full Stack Webfejlesztő",
     "description": "Full Stack Fejlesztő, aki a React frontendeket Node.js alapú, hatékony backendekkel köti össze...",
     "github_button": "GitHub",
