--- a/MartinH-Portfolio/src/locales/hu/translation.json
+++ b/MartinH-Portfolio/src/locales/hu/translation.json
@@ -8,7 +8,7 @@
   "hero": {
     "name": "Horváth Martin",
     "title": "Full Stack Webfejlesztő",
-    "description": "Full Stack Fejlesztő, aki a React frontendeket Node.js alapú, hatékony backendekkel köti össze...",
+    "description": "Full Stack Fejlesztő, aki intuitív React felületeket és stabil, Node.js alapú backend rendszereket épít. Szakértelmem kiterjed REST API-k tervezésére Express.js segítségével, adatbázis-kezelésre Prismával és PostgreSQL-lel, valamint a teljes alkalmazás robusztussá tételére TypeScripttel. Célom a tiszta kód írása és a komplex problémák hatékony megoldása.",
     "github_button": "GitHub",
     "contact_button": "Kapcsolat"
   }
