--- a/MartinH-Portfolio/src/locales/en/translation.json
+++ b/MartinH-Portfolio/src/locales/en/translation.json
@@ -77,7 +77,8 @@
       "HTML5",
       "CSS3",
       "Tailwind CSS",
-      "Git"
+      "Git",
+      "Docker"
     ],
     "soft_skills": [
       "Problem Solving",
