--- a/MartinH-Portfolio/src/locales/hu/translation.json
+++ b/MartinH-Portfolio/src/locales/hu/translation.json
@@ -76,7 +76,8 @@
       "HTML5",
       "CSS3",
       "Tailwind CSS",
-      "Git"
+      "Git",
+      "Docker"
     ],
     "soft_skills": [
       "Problémamegoldás",
